--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "url": "https://github.com/ascodix/ngx-isotope"
   },
   "author": {
-    "name": "Albuisson Stéphane",
-    "email": "stephane.albuisson@gmail.com"
+    "name": "Patel Mayank",
+    "email": "patelmayankce@gmail.com"
   },
   "keywords": [
     "angular2",
